# pdf-translator

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/design/: issue-29-font-subsetting.md  issue-35-openai-model-reliability.md  issue-57-bullet-list-structure.md  issue-62-document-summary.md  issue-66-multilingual-json.md  markdown-output-design.md  pdf-processor-design.md  pp-doclayout-design.md  translation-pipeline-design.md  translators-design.md
examples/: README.md  translate_pdf.py
examples/summary_output/: sample_llama.ja.json  sample_llama.ja.md  sample_llama.json  sample_llama.md  test4_original.md  test4_translated.json  test4_translated.md
scripts/: check_v2_reading_order.py  compare_layout_models.py  generate_full_comparison.py  visualize_layout.py
scripts/evaluation/: separator_behavior.py
src/pdf_translator/: __init__.py  cli.py
tests/: __init__.py  conftest.py  debug_translation.py  generate_review_outputs.py  run_quick_eval.py  test_always_cid.py  test_assign_categories.py  test_base_document.py  test_base_summary.py  test_cli.py  test_debug_issues.py  test_document_summary.py  test_font_adjuster.py  test_font_subsetter.py  test_image_extractor.py  test_layout_analyzer.py  test_llm_client.py  test_llm_summary_generator.py  test_markdown_writer.py  test_openai_translator.py  test_paragraph_extractor.py  test_paragraph_merger.py  test_pdf_evaluation.py  test_pdf_processor.py  test_pipeline.py  test_pipeline_markdown.py  test_pipeline_text_splitting.py  test_side_by_side.py  test_summary_extractor.py  test_table_extractor.py  test_text_layout.py  test_text_merger.py  test_thumbnail_generator.py  test_translated_document.py  test_translated_summary.py  test_translation_document.py  test_translators.py
tests/evaluation/: test_separator_behavior.py
tests/outputs/: comparison_summary.json  (+2 more)
(+52 files in other folders)
