[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdf-translator"
version = "0.1.0"
description = "PDF translation tool with layout preservation - outputs Markdown and PDF"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Mega-Gorilla" }
]
keywords = ["pdf", "translation", "markdown", "layout"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "pypdfium2>=4.0.0",
    "spacy>=3.7.0",
    "deep-translator>=1.11.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
deepl = ["aiohttp>=3.9.0"]
openai = ["openai>=1.0.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
translate-pdf = "pdf_translator.cli:main"

[project.urls]
Homepage = "https://github.com/Mega-Gorilla/pdf-translator"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_translator"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    # Suppress pypdfium2 finalizer warnings (known library behavior, not affecting functionality)
    # (?s) flag makes . match newlines, allowing pattern to match multi-line warning messages
    "ignore:(?s).*pypdfium2.*:pytest.PytestUnraisableExceptionWarning",
]
